use tonic::{transport::Server, Request, Response, Status};
use tracing::{info, error};

pub mod index {
    tonic::include_proto!("edgecb.index.v1");
}

use index::index_service_server::{IndexService, IndexServiceServer};
use index::*;

#[derive(Debug, Default)]
pub struct IndexServiceImpl {}

#[tonic::async_trait]
impl IndexService for IndexServiceImpl {
    async fn create_index(
        &self,
        request: Request<CreateIndexRequest>,
    ) -> Result<Response<CreateIndexResponse>, Status> {
        let req = request.into_inner();
        info!(
            index_name = %req.index_name,
            bucket = %req.bucket,
            scope = %req.scope,
            collection = %req.collection,
            "Creating index"
        );

        // TODO: Implement index creation
        Ok(Response::new(CreateIndexResponse {
            success: true,
            message: format!("Index '{}' creation initiated", req.index_name),
            index_info: None,
        }))
    }

    async fn drop_index(
        &self,
        request: Request<DropIndexRequest>,
    ) -> Result<Response<DropIndexResponse>, Status> {
        let req = request.into_inner();
        info!(index_name = %req.index_name, "Dropping index");

        // TODO: Implement index drop
        Ok(Response::new(DropIndexResponse {
            success: true,
            message: format!("Index '{}' dropped", req.index_name),
        }))
    }

    async fn list_indexes(
        &self,
        request: Request<ListIndexesRequest>,
    ) -> Result<Response<ListIndexesResponse>, Status> {
        let req = request.into_inner();
        info!(bucket = %req.bucket, "Listing indexes");

        // TODO: Implement list indexes
        Ok(Response::new(ListIndexesResponse {
            indexes: vec![],
        }))
    }

    async fn get_index_stats(
        &self,
        request: Request<GetIndexStatsRequest>,
    ) -> Result<Response<GetIndexStatsResponse>, Status> {
        let req = request.into_inner();
        info!(index_name = %req.index_name, "Getting index stats");

        // TODO: Implement stats retrieval
        Err(Status::unimplemented("Index stats not yet implemented"))
    }

    type BuildIndexStream = tokio_stream::wrappers::ReceiverStream<Result<BuildIndexResponse, Status>>;

    async fn build_index(
        &self,
        request: Request<BuildIndexRequest>,
    ) -> Result<Response<Self::BuildIndexStream>, Status> {
        let req = request.into_inner();
        info!(bucket = %req.bucket, "Building indexes");

        let (tx, rx) = tokio::sync::mpsc::channel(128);
        
        tokio::spawn(async move {
            // TODO: Implement index building with progress updates
            let _ = tx.send(Ok(BuildIndexResponse {
                message: Some(build_index_response::Message::Complete(BuildComplete {
                    index_name: "placeholder".to_string(),
                    total_docs: 0,
                    duration_ms: 0,
                })),
            })).await;
        });

        Ok(Response::new(tokio_stream::wrappers::ReceiverStream::new(rx)))
    }

    type ScanStream = tokio_stream::wrappers::ReceiverStream<Result<ScanResponse, Status>>;

    async fn scan(
        &self,
        request: Request<ScanRequest>,
    ) -> Result<Response<Self::ScanStream>, Status> {
        let req = request.into_inner();
        info!(index_name = %req.index_name, "Scanning index");

        let (tx, rx) = tokio::sync::mpsc::channel(128);
        
        tokio::spawn(async move {
            // TODO: Implement index scan
        });

        Ok(Response::new(tokio_stream::wrappers::ReceiverStream::new(rx)))
    }

    async fn range_scan(
        &self,
        request: Request<RangeScanRequest>,
    ) -> Result<Response<Self::ScanStream>, Status> {
        let req = request.into_inner();
        info!(index_name = %req.index_name, "Range scanning index");

        let (tx, rx) = tokio::sync::mpsc::channel(128);
        
        tokio::spawn(async move {
            // TODO: Implement range scan
        });

        Ok(Response::new(tokio_stream::wrappers::ReceiverStream::new(rx)))
    }
}

#[tokio::main]
async fn main() -> Result<(), Box<dyn std::error::Error>> {
    // Initialize tracing
    tracing_subscriber::fmt()
        .with_env_filter("info")
        .json()
        .init();

    let addr = std::env::var("BIND_ADDR")
        .unwrap_or_else(|_| "0.0.0.0:9102".to_string())
        .parse()?;

    let service = IndexServiceImpl::default();

    info!("Index service starting on {}", addr);

    Server::builder()
        .add_service(IndexServiceServer::new(service))
        .serve(addr)
        .await?;

    Ok(())
}
